--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.21",
     "mongose": "0.0.2-security",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
   }
 }
