--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.2.4",
     "body-parser": "^1.19.0",
     "connect": "^3.7.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsftp": "^2.1.3",
     "mongoose": "^5.9.21",
     "mongose": "0.0.2-security",
     "multer": "^1.4.2",
